# foocat-archive

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat.rst  modules.rst
foocat/: foocat.py
tests/: test_foocat.py
